--- a/views/iniciarSesion.pug
+++ b/views/iniciarSesion.pug
@@ -23,5 +23,6 @@ html(lang="en")
                 .campo.enviar
                     input.boton(type="submit" value="Iniciar Sesión")
                 .campo.acciones
-                    a(href="/crear-cuenta") ¿Aún no tienes cuenta? Crea una gratis
-                    a(href="/reestablecer") ¿Olvidaste tu Contraseña?
+                    a.log(href="/crear-cuenta") ¿Aún no tienes cuenta? Crea una gratis
+                    a.regis(href="/crear-cuenta") Registrate
+                    a.contra(href="/reestablecer") ¿Olvidaste tu Contraseña?
