--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,12 +5,12 @@ html(lang="en")
     body
         header.barra
             h1 UpTask - Administrador de Proyectos
-            a(href="/cerrar-sesion") Cerrar Sesión
+            a.cer(href="/cerrar-sesion") Cerrar Sesión
 
         main.contenedor
             aside.contenedor-proyectos
                 .panel.crear-proyecto
-                    a(href="/nuevo-proyecto" class="boton") Nuevo Proyecto
+                    a.ali(href="/nuevo-proyecto" class="boton") Nuevo Proyecto
                         span +
                 .panel.lista-proyectos
                     h2 Proyectos
