--- a/views/tareas.pug
+++ b/views/tareas.pug
@@ -11,7 +11,7 @@ block contenido
             .campo.enviar
                 input.boton.nueva-tarea(type="submit" value="Agregar") 
 
-        //- pre= vardump(tareas)
+        
 
         .listado-pendientes
             ul
@@ -30,17 +30,17 @@ block contenido
 
 
 
-        //- pre= vardump(tareas)
+       
 
-        // Avance del Proyecto
+    
         .avance 
             h2 Avance del Proyecto
             #barra-avance.barra-avance
                 #porcentaje.porcentaje
 
 
-        // Acciones que se pueden realizar
+        
         .contenedor-acciones
             a(href=`/proyecto/editar/${proyecto.id}` class="boton") Editar Proyecto
-            button#eliminar-proyecto(data-proyecto-url=proyecto.url type="button" class="boton eliminar") Eliminar Proyecto
+            button#eliminar-proyecto(data-proyecto-url=proyecto.url type="button" class="boton eliminar") Eliminar 
 
