--- a/views/reestablecer.pug
+++ b/views/reestablecer.pug
@@ -21,5 +21,5 @@ html(lang="en")
                     input(type="text" name="email" placeholder="Tu Email" )
                 .campo.enviar
                     input.boton(type="submit" value="Reestablecer Password")
-                .campo.acciones
-                    a(href="/iniciar-sesion") Ya lo recordé, volver a Login
+                .campo.acciones.pala
+                    a(href="/iniciar-sesion") A login
